@@ -4,10 +4,13 @@ import by.abram.astore.dto.CategoryDto;
 import by.abram.astore.entity.Category;
 import by.abram.astore.mapper.CategoryMapper;
 import by.abram.astore.repository.CategoryRepository;
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,17 +19,38 @@ public class CategoryService {
     private final CategoryRepository categoryRepository;
     private final CategoryMapper categoryMapper;
 
+    @Transactional
+    public CategoryDto create(CategoryDto dto) {
+        Category category = categoryMapper.toEntity(dto);
+        return categoryMapper.toDto(categoryRepository.save(category));
+    }
+
     @Transactional(readOnly = true)
-    public List<CategoryDto> getAllCategories() {
+    public CategoryDto findById(Long id) {
+        return categoryRepository.findById(id)
+                .map(categoryMapper::toDto)
+                .orElseThrow(() -> new EntityNotFoundException("Category not found, id: " + id));
+    }
+
+    @Transactional(readOnly = true)
+    public List<CategoryDto> findAll() {
         return categoryRepository.findAll().stream()
                 .map(categoryMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional
-    public CategoryDto saveCategory(CategoryDto dto) {
+    public CategoryDto update(Long id, CategoryDto dto) {
+        if (!categoryRepository.existsById(id)) {
+            throw new EntityNotFoundException("Category not found, id: " + id);
+        }
         Category category = categoryMapper.toEntity(dto);
-        Category saved = categoryRepository.save(category);
-        return categoryMapper.toDto(saved);
+        category.setId(id);
+        return categoryMapper.toDto(categoryRepository.save(category));
+    }
+
+    @Transactional
+    public void delete(Long id) {
+        categoryRepository.deleteById(id);
     }
 }
